--- a/index.Rmd
+++ b/index.Rmd
@@ -27,4 +27,10 @@ Assignments
     
     * [Documentation](./assignments/hw-04/docs/_build/html/index.html)
 
+* HW 5
+
+    * [README](./assignments/hw-05/README.html)
+    
+    * [Documentation](./assignments/hw-05/docs/_build/html/index.html)
+
 
